[package]
name = "vpl-relying-party-cli"
version = "0.1.3"
description = "VPL Relying Party Command-line Utility"
authors = ["Exzo <info@exzo.com>", "Vlad Pavlichek <vlader112@gmail.com>"]
repository = "https://github.com/ExzoNetwork/exzo-program-library"
license = "Apache-2.0"
edition = "2018"
readme = "README.md"

[dependencies]
borsh = "0.9.0"
clap = "2.33.3"
cid = "0.7.0"
multihash = "0.10"
solana-clap-utils = "1.7.4"
solana-cli-config = { git = "https://github.com/ExzoNetwork/Exzo-Network-Blockchain" }
solana-client = "1.7.4"
solana-logger = "1.7.4"
solana-sdk = "1.7.4"
vpl-relying-party = { version = "0.1.1", path = "../program", features = ["no-entrypoint"] }

[[bin]]
name = "vpl-relying-party"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
