[package]
name = "vpl-relying-party"
version = "0.1.1"
description = "Exzo Program Library Relying-Party"
authors = ["Exzo <info@exzo.com>", "Vlad Pavlichek <vlader112@gmail.com>"]
repository = "https://github.com/ExzoNetwork/exzo-program-library"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
borsh = "0.9.0"
cid = "0.7.0"
multihash = "0.10"
num-derive = "0.3"
num-traits = "0.2"
solana-program = "1.7.4"
thiserror = "1.0.25"

[dev-dependencies]
solana-program-test = "1.7.4"
solana-sdk = "1.7.4"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
